--- a/app/templates/about.hbs
+++ b/app/templates/about.hbs
@@ -1,4 +1,2 @@
 {{outlet}}
-<div class="header">
-  {{#link-to 'about'}}Contact Us{{/link-to}}
-</div>
+  {{#link-to 'contact'}}Contact Us{{/link-to}}
