--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,6 @@
 
 .header{
-  background: url(https://upload.wikimedia.org/wikipedia/commons/7/7b/Spam_musubi_at_Ninja_Sushi.jpg);
+  background: url(https://www.nasa.gov/sites/default/files/styles/full_width_feature/public/thumbnails/image/25126583741_d7db3f6905_o.jpg?itok=34hyLETP);
   background-size: cover;
   background-position: center;
 }
