Edit/Update articles.

--- a/app/templates/components/article-tile.hbs
+++ b/app/templates/components/article-tile.hbs
@@ -1,13 +1,15 @@
 
 <div class="grid-cell">
   <div class="tzr-th">
+    {{#link-to 'article' article.id}}
     <img src={{article.image}} alt={{article.type}} {{action 'imageHide'}}>
+    {{/link-to}}
   </div>
 
-  <h4>{{article.title}} {{#link-to article.url}}...{{/link-to}}</h4>
+  <h4>{{article.title}}</h4>
 
   <div class="tease_th">
     <span class="tz_l">{{article.author}}</span>
-    <span class="tz_r">{{article.posted}}</span>
+    <span class="tz_r">{{moment-from-now article.posted}}</span>
   </div>
 </div>
