Connect the dots. Working comments.

--- a/app/templates/about.hbs
+++ b/app/templates/about.hbs
@@ -1,2 +1,8 @@
-{{outlet}}
-  {{#link-to 'contact'}}Contact Us{{/link-to}}
+{{ header-nav }}
+
+<figure>
+  <img src="http://blogs.nasa.gov/spacestation/wp-content/uploads/sites/240/2016/02/Cbqpk0aVIAA1hyw.jpg-large.jpg" alt="NASA Guy" />
+  <figcaption>
+  We are so nerdy we are in a fan-club for this guy
+  </figcaption>
+</figure>
