--- a/app/templates/components/new-article.hbs
+++ b/app/templates/components/new-article.hbs
@@ -5,7 +5,7 @@
     </div>
 
     <div class="form-group">
-      {{input value=image class="w90" id="image" placeholder="image url"}}
+      {{input value="https://blogs.nasa.gov/spacestation/wp-content/uploads/sites/240/2016/02/Cbqpk0aVIAA1hyw.jpg-large.jpg" class="w90" id="image" placeholder="image url"}}
     </div>
 
     <div class="form-group">
