--- a/app/templates/contact.hbs
+++ b/app/templates/contact.hbs
@@ -1,7 +1,5 @@
-{{outlet}}
-<div class="header">
-  {{#link-to 'about'}}About Us{{/link-to}}
-</div>
+{{ header-nav }}
+<!-- http://emberobserver.com/addons/liquid-tether -->
 <p>Super Rentals Representatives would love to help you choose a destination or answer
 any questions you may have.</p>
 <p>Contact us today:</p>
